--- a/css/base.css
+++ b/css/base.css
@@ -1,49 +1,125 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+body {
+  margin: 0;
+  font-family: "Lato", sans-serif;
+  font-size: 1.5rem;
+}
+
+.row {
+  margin-top: 4rem;
+}
+
+.row::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.col-4 {
+  float: left;
+  width: 25%;
+}
+.col-3 {
+  float: left;
+  width: 33.3%;
+}
+
+.col-2 {
+  float: left;
+  width: 50%;
+}
+
+.section-title {
+  text-align: center;
+  margin-bottom: 4rem;
+  color: #3e4555;
+  font-size: 3rem;
+}
+
+.container {
+  margin: 0 auto;
+}
+
+/****************Responsive Design**************************/
+
+@media (max-width: 768px) {
+
+  [class*="col-"] {
+    width: 100%;
+    padding: 0 10px;
   }
-  
-  html {
-    scroll-behavior: smooth;
+
+
+
+}
+
+@media (min-width: 576px) {
+    .container {
+      width: 300px;
+      margin: 0 auto;
+    }
+    html {
+        font-size: 55%;
+      }
+
   }
-  body {
-    margin: 0;
-    font-family: "Lato", sans-serif;
+
+  @media (max-width: 576px) {
+    .container {
+      width: 300px;
+      margin: 0 auto;
+    }
+
+    html {
+        font-size: 45%;
+      }
   }
-  
-  /* Ortak tanımlamaları*/
-  .row {
-    margin-top: 40px;
-  }
-  
-  .row::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
-  
-  .col-4 {
-    float: left;
-    width: 25%;
-  }
-  .col-3 {
-    float: left;
-    width: 33.3%;
-  }
-  
-  .col-2 {
-    float: left;
-    width: 50%;
-  }
-  
-  .section-title {
-    text-align: center;
-    margin-bottom: 40px;
-    color: #3e4555;
-    font-size: 30px;
-  }
-  
+
+@media (min-width: 768px) {
   .container {
+    width: 740px;
     margin: 0 auto;
-    width: 1000px;
   }
   
+
+}
+
+@media (min-width: 992px) {
+  .container {
+    width: 940px;
+    margin: 0 auto;
+  }
+
+  html {
+    font-size: 65%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1100px;
+    margin: 0 auto;
+  }
+
+  html {
+    font-size: 70%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  html {
+    font-size: 80%;
+  }
+}
