--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,31 @@ main {
   margin: 0 1rem;
 }
 
+.main-nav__item:last-child {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .main-nav__item {
+    display: none;
+  }
+  .main-nav__item:last-child {
+    display: block;
+  }
+  .responsive .main-nav__item {
+    display: block;
+    text-align: left;
+    margin: 1rem 0;
+  }
+  .responsive .main-nav__item:last-child {
+    position: absolute;
+    top: 6px;
+    right: 40px;
+  }
+  .responsive .main-nav {
+    display: block;
+  }
+}
 .main-header__logo {
   color: #fff;
   text-decoration: none;
@@ -75,14 +100,6 @@ main {
   color: #fff;
 }
 
-.main-nav__item::before {
-  content: "\2022";
-  color: #fff;
-}
-
-.main-nav__item--login::before {
-  content: none;
-}
 /* header */
 /**********************************************************************************************************/
 
@@ -118,7 +135,6 @@ main {
   #showcase {
     height: 60vh;
   }
-
 }
 
 @media (min-width: 992px) {
@@ -320,7 +336,6 @@ footer {
   position: relative;
   bottom: -30rem;
 }
-
 
 footer a {
   color: white;
